[package]
name = "fractais"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
rand = "0.8.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.81"
web-sys = "0.3.60"
js-sys = "0.3.60"
num-complex = "0.4.0"
rayon = "1.5.1"

[lib]
crate-type = ["cdylib", "rlib"]
